--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "@nuxt/eslint": "1.10.0",
     "@nuxt/fonts": "0.12.1",
     "@tailwindcss/vite": "^4.1.17",
+    "chart.js": "^4.5.1",
     "eslint": "^9.39.1",
     "nuxt": "^4.2.1",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.25",
+    "vue-chartjs": "^5.3.3",
     "vue-router": "^4.6.3"
   }
 }
